--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -2,13 +2,92 @@
 .home-top{
     /* background-color: #9BCF53; */
     /* border-radius: 20px; */
-    margin: 4vh 4vw;
-    padding: 4vh;
-    height: 15vh;
+    margin: 3vh 3vw;
+    padding: 3vh;
+    height: 20vh;
+}
+
+.home-top .newtask-container{
+    max-width: 700px;
+    margin: 1vh auto;
+	z-index: 3;
+}
+
+.home-top .newtask-content{
+	/* border: 1px solid #000000; */
+	position: relative;
+	border-radius: 8px;
+	padding: 4px;
+	z-index: 3;
+	background: #ffffff;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.home-top .newtask-content .inputs{
+    height: 2rem;
+	font-family: "Poppins", sans-serif;
+    width: 97%;
+    font-size: 1rem;
+	outline: none;
+	border: none;
+	margin: 0px 1px;
+	padding: 4px 8px;
+	/* border: 1px solid red; */
+}
+
+/* .home-top .newtask-content .inputs:focus {
+	border: 1px solid #000000;
+	border-radius: 4px;
+
+} */
+
+.home-top .newtask-content .inputs::placeholder {
+	color: #cbcbcb;
+}
+
+.home-top .newtask-content #titleinput{
+	margin: 2px 0;
+	font-weight: 600;
+}
+
+.home-top .newtask-content #bodyinput{
+	height: 6rem;
+	display: none;
+	margin-bottom: 2rem;
+	background: #ffffff;
+	resize:vertical;
+}
+
+.home-top .newtask-button #button{
+	background-color: #e0fd98;
+	border-radius: 10px;
+	box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+	color: #000000;
+	cursor: pointer;
+	font-family: "Poppins", sans-serif;
+	padding: 4px 15px;
+	text-align: center;
+	text-decoration: none;
+	transition: all 250ms;
+	border: none;
+	font-size: 0.9rem;
+	font-weight: 500;
+	position: absolute;
+	right: 4px;
+	bottom:4px;
+	display: none;
+}
+
+
+
+
+.home-top .newtask-button button:hover {
+  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+  transform: scale(1.05) ;
 }
 
 .home-body{
-    margin: 1vh 4vw;
+    margin: 4vh 4vw;
     padding-top: 2vh;
     display: flex;
     flex-direction: row;
